css/theme.css
/* ... */
.display-1,
.display-2,
.display-3,
.display-4,
.display-5 {
  font-family: "neue-haas-grotesk-text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

.site-container {
  width: 1352px;
  position: relative;
  margin: 0 auto;
  margin-top: 45px;
  display: grid;
  padding: 1px;
  padding-bottom: 45px;
  grid-template-columns: repeat(30, 45px);
  grid-auto-rows: 45px;
  column-gap: 0px;
  row-gap: 0px;
  overflow: hidden;
  background-color: #FCFAF3;
  background-image: url("data:image/svg+xml,%3Csvg%20version%3D'1.1'%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20xmlns%3Axlink%3D'http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink'%20x%3D'0px'%20y%3D'0px'%20viewBox%3D'0%200%2045%2045'%20xml%3Aspace%3D'preserve'%3E%20%3Cstyle%20type%3D'text%2Fcss'%3E%20.st0%7Bfill%3Anone%3Bstroke%3A%23231F20%3Bstroke-width%3A4px%3B%7D%20%3C%2Fstyle%3E%20%3Cpolyline%20class%3D'st0'%20points%3D'0%2C45%200%2C0%2045%2C0%20'%2F%3E%20%3C%2Fsvg%3E");
  background-size: 45px;
  background-position: left top;
}
@media (max-width: 1450px) {
  .site-container {
    width: 1172px;
  }
}
@media (max-width: 1200px) {
  .site-container {
    width: 992px;
  }
}
@media (max-width: 992px) {
  .site-container {
    width: 767px;
  }
}
.site-container > div {
  border: 1px solid #292829;
}
@media (max-width: 768px) {
  .site-container {
    width: 100vw;
  }
}

.site-main {
  display: contents;
}

article {
  display: contents;
}

nav {
  position: absolute;
  width: 1352px;
  left: 0;
  right: 0;
  margin: 0 auto;
  margin-top: 45px;
  display: flex;
  z-index: 100;
  height: 45px;
  justify-content: space-between;
}
@media (max-width: 1450px) {
  nav {
    width: 1172px;
  }
}
@media (max-width: 1200px) {
  nav {
    width: 992px;
  }
}
@media (max-width: 992px) {
  nav {
    width: 767px;
  }
}
@media (max-width: 768px) {
  nav {
    width: 100vw;
  }
}
nav .buttons {
  display: flex;
  flex-direction: row-reverse;
  max-height: 45px;
  padding-right: 2px;
}
nav .break {
  display: none;
}
@media (max-width: 768px) {
  nav {
    flex-wrap: wrap;
    justify-content: flex-start;
  }
  nav .buttons {
    width: 50vw;
    flex-wrap: wrap;
    flex-direction: row;
    margin-left: 45px;
  }
  nav .break {
    display: block;
    flex-basis: 100%;
    height: 0;
  }
}

.button, .nav-brand {
  border: 2px solid #292829;
  border-right: none;
  border-bottom: none;
  line-height: 45px;
  height: 45px;
  font-family: "neue-haas-grotesk-text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-size: 0.9em;
  letter-spacing: 0.5px;
  width: 135px;
  margin-right: 45px;
  background-color: #FCFAF3;
  text-align: center;
  background-color: #FCFAF3;
}
.button a, .nav-brand a {
  border: none;
}
@media (min-width: 768px) {
  .button:hover, .nav-brand:hover {
    background-color: #292829;
  }
  .button:hover span, .nav-brand:hover span {
    color: #FCFAF3;
  }
}
.button.toggled, .toggled.nav-brand {
  background-color: #292829;
}
.button.toggled span, .toggled.nav-brand span {
  color: #FCFAF3;
}

.nav-brand {
  border-right: 2px #292829 solid;
  margin-left: 45px;
  width: 92px;
  height: 45px;
  grid-area: 2/2/3/4;
  font-size: 1.5em;
  line-height: normal;
  letter-spacing: 3px;
}

.site-description {
  grid-area: 13/2/span 3/span 7;
  display: flex;
  justify-content: center;
  flex-direction: column;
  color: #292829;
  font-size: 2rem;
  background-color: #FCFAF3;
}
.site-description p {
  font-size: 2rem;
  margin: 10px;
}
@media (max-width: 1200px) {
  .site-description {
    grid-area: 13/2/span 3/span 6;
  }
  .site-description p {
    font-size: 1.8rem;
  }
}
@media (max-width: 992px) {
  .site-description {
    display: none;
  }
}

.site-about {
  position: relative;
  z-index: 50;
  grid-column-start: 15;
  grid-column-end: 30;
  grid-row-start: 6;
  align-self: stretch;
  padding: 15px;
  background-color: #FCFAF3;
}
@media (max-width: 1450px) {
  .site-about {
    grid-column-start: 13;
    grid-column-end: 26;
  }
}
@media (max-width: 1200px) {
  .site-about {
    grid-column-start: 9;
    grid-column-end: 22;
  }
}
@media (max-width: 992px) {
  .site-about {
    grid-column-start: 2;
    grid-column-end: 17;
  }
}
@media (max-width: 768px) {
  .site-about {
    grid-column: 1 !important;
    width: calc(100vw - 45px);
    margin-left: 45px;
  }
}
@media (max-width: 768px) {
  .site-about .has-text-color {
    font-size: 30px !important;
  }
}
.site-about h2 {
  margin: 0px -15px;
  padding: 15px;
}
.site-about h2:first-of-type {
  margin-top: 50px;
}
@media (max-width: 768px) {
  .site-about h2 {
    font-size: 2rem;
  }
}
.site-about div {
  padding: 15px;
}
.site-about .about-header {
  border-bottom: 1px solid #292829;
  position: sticky;
  top: 0;
  background-color: #FCFAF3;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.site-about .about-header span {
  font-size: 1.8em;
}
.site-about .about-header span.close-button {
  transform: scale(1.6) translateY(4px);
}
@media (max-width: 768px) {
  .site-about .about-header {
    height: 100px;
    border-bottom: 1px solid #292829;
    border-right: none;
  }
  .site-about .about-header span {
    font-size: 1.6em;
  }
}

.site-contact {
  grid-area: 30/2/span 8/span 11;
  background-color: #FCFAF3;
  padding: 10px;
  padding-top: 20px;
}
@media (max-width: 1450px) {
  .site-contact {
    grid-area: 30/2/span 8/span 9;
  }
}
@media (max-width: 1200px) {
  .site-contact {
    grid-area: 30/2/span 8/span 13;
  }
}
@media (max-width: 992px) {
  .site-contact {
    grid-column-start: 2;
    grid-column-end: 14;
    grid-row-start: 0;
  }
}
/* ... */

